--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 					<div class="header__logo"><img src="images/logo-main.png" alt=""></div>
 					<nav class="nav">
 						<ul class="nav__list">
-							<li class="nav__item"><span class="nav__link"><span class="main-color">Bei</span> akuten
-								Entzündungen</span>
+							<li class="nav__item"><span class="nav__link"><span class="main-color">100% natürlich</span></span>
 							</li>
-							<li class="nav__item"><span class="nav__link"><span class="main-color">Bei</span> chronischen
-								Erkrankungen</span>
+							<li class="nav__item"><span class="nav__link"><span class="main-color">Qualitätsgarantie</span> </span>
 							</li>
 							<li class="nav__item"><span class="nav__link"><span class="main-color">Bei</span>
 								altersbedingten Veränderungen</span>
